@@ -543,6 +543,9 @@ body {
     td.boolean {
         text-align: left;
     }
+    tr {
+        line-height: 1.5rem;
+    }
     .caption {
         margin-left: 0.5rem;
     }
